fix logos on table, footer overlap and missing key prop (#88)
* refactor: :rotating_light: fix linter errors

* fix: :art: fix list logo and footer overlap

* style: :rotating_light: fix linter errors

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -4,6 +4,7 @@
 
 body {
   padding-top: 70px; // fixed-navbar overlap
+  padding-bottom: 70px; // fixed-navbar overlap
 }
 
 .capitalize {
